--- a/Astronomy/Astronomy/Storyboards/Base.lproj/Main.storyboard
+++ b/Astronomy/Astronomy/Storyboards/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="Stack View standard spacing" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -64,14 +65,61 @@
                     <view key="view" contentMode="scaleToFill" id="dT1-rN-2NH">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="wzq-2Y-L7P">
+                                <rect key="frame" x="0.0" y="88" width="414" height="548"/>
+                            </imageView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="uuw-3W-2jy">
+                                <rect key="frame" x="20" y="644" width="374" height="208"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taken by &lt;Rover&gt; on &lt;date&gt; (Sol &lt;sol&gt;)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xo9-Gx-vqC">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacingType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="xQl-Xw-u6p">
+                                        <rect key="frame" x="0.0" y="28.5" width="374" height="20.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Camera:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9J-Al-BlD">
+                                                <rect key="frame" x="0.0" y="0.0" width="64.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m55-ub-p0z">
+                                                <rect key="frame" x="72.5" y="0.0" width="301.5" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MRL-bB-Oxa">
+                                        <rect key="frame" x="0.0" y="57" width="374" height="151"/>
+                                        <state key="normal" title="Save to Photo Library"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="uuw-3W-2jy" firstAttribute="top" secondItem="wzq-2Y-L7P" secondAttribute="bottom" constant="8" id="FlR-ZE-OTD"/>
+                            <constraint firstItem="8gn-ed-KWV" firstAttribute="bottom" secondItem="wzq-2Y-L7P" secondAttribute="bottom" constant="226" id="IcC-rd-JV4"/>
+                            <constraint firstItem="8gn-ed-KWV" firstAttribute="trailing" secondItem="wzq-2Y-L7P" secondAttribute="trailing" id="Jk8-et-6Wh"/>
+                            <constraint firstItem="8gn-ed-KWV" firstAttribute="bottom" secondItem="uuw-3W-2jy" secondAttribute="bottom" constant="10" id="TJ6-ka-R6e"/>
+                            <constraint firstItem="wzq-2Y-L7P" firstAttribute="leading" secondItem="8gn-ed-KWV" secondAttribute="leading" id="XZl-yM-Sbh"/>
+                            <constraint firstItem="uuw-3W-2jy" firstAttribute="leading" secondItem="dT1-rN-2NH" secondAttribute="leadingMargin" id="YDq-xT-JAn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="uuw-3W-2jy" secondAttribute="trailing" id="bfV-ty-p3V"/>
+                            <constraint firstItem="wzq-2Y-L7P" firstAttribute="top" secondItem="8gn-ed-KWV" secondAttribute="top" id="uYM-nE-YJ3"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="8gn-ed-KWV"/>
                     </view>
                     <navigationItem key="navigationItem" id="7yS-42-jxV"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XEO-wy-xBI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1551" y="62"/>
+            <point key="canvasLocation" x="1550.7246376811595" y="61.607142857142854"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dko-s9-MUS">
